# pyauto

./: .gitignore  GMVehicleSim_Auto.py  MACT.csv  README.md  atx_uninstall.py  brush_script.py  conftest.py  ddd.py  failures  framework.md  install.bat  pytest.ini  pytest_plugins.py  requirements.txt  run.bat  run.py  server.bat  test.py  xxx.py
allure_env/: categories.json  environment.properties
conf/: __init__.py  config.py  config.yaml  example.yaml  executor.json  openReport.bat
libs/: __init__.py  install.bat  requirements.txt  weditor.bat
libs/mobileperf/: config.conf
libs/uiautomator2/: .gitignore  ABOUT.rst  AUTHORS  LICENSE  README.md  install.bat  requirements.txt  setup.cfg  setup.py  test.py  upload.bat
libs/uiautomator2/uiautomator2/: __init__.py  _selector.py  init.py
libs/weditor/: __main__.py
plugins/: __init__.py
plugins/py/: __init__.py  common.py
repos/: conftest.py
repos/GM/: __init__.py  conftest.py  test_smple.py
repos/GM/TeenDriver/: __init__.py  conftest.py  element.py  test_teen_driver.py
repos/GM/keywords/: common.py  gm_vehicle_sim.py  teen_driver_keywords.py
repos/lg/: conftest.py  test_xxx.py
repos/lxl/: __init__.py  test_xxx.py
server/: __init__.py  cli.py  heartbeat.py  host.py  index.html  loader.py  main.py  o.py  repo.py  views_device.py  views_repo.py  views_task.py  ws.py  ws_manager.py  ws_scrcpy.py  xxx.html
server/core/: __init__.py  adb.py  collector.py  device_android.py  download.py  host.py  loader.py  o.py  proxy_port.py  remote.py  repo.py
server/core/scrcpy/: __init__.py  client.py  controller.py
uiauto/: __init__.py
uiauto/android/: __init__.py  aapt.py  adb.py  android_keys.py  base.py  device.py  listener.py  parse.py  pool.py  processing.py  u2.py
uiauto/android/plugins/: app.py  (+18 more)
uiauto/perf/: __init__.py  cpu.py  flow.py  fps.py  logcat.py  memory.py  monitors.py  monkey.py  power.py  pref_data_fun.py  thread_num.py
uiauto/task/: __init__.py  pool.py  status.py
uiauto/windows/: __init__.py  core.py
utils/: __init__.py  abnormal_case.xlsx  allure_fun.py  check.py  command.py  dict.py  errors.py  excel_fun.py  faker.py  file_fun.py  fn.py  host.py  image.py  lark_notify.py  list.py  log.py  model.py  net.py  path_fun.py  proxy.py  py.py  repo.py  s.py  time_fun.py  tools.py  yaml_fun.py
(+7 files in other folders)
