# [easy_install]
# index_url = https://pypi.tuna.tsinghua.edu.cn/simple

[metadata]
name = uiautomator2
author = "xxx"
version = 2.10.17
author_email = "xxxx"
summary = "Uiautomator2 library compatible with Android 12"
license = MIT
description_file = ABOUT.rst

[files]
packages =
    uiautomator2
data_files =
    uiautomator2/assets = uiautomator2/assets/*
    uiautomator2/ext-archived = uiautomator2/ext-archived/*
    uiautomator2/ext/htmlreport/assets = uiautomator2/ext/htmlreport/assets/*

# all classifier can be found in https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Testing



[entry_points]
# https://docs.openstack.org/pbr/3.1.1/#entry-points
console_scripts = 
   uiautomator2 = uiautomator2.__main__:main
