[metadata]
name = own-uiautomator2
version = 2.16.22
author = "xxxx"
author_email = "xxx@qq.com"
summary = "Uiautomator2 library compatible with Android 12"
license = MIT
description_file = ABOUT.rst
# all classifier can be found in https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Testing

[files]
packages =
    uiautomator2
data_files =
    uiautomator2/assets = uiautomator2/assets/*
    uiautomator2/ext-archived = uiautomator2/ext-archived/*
    uiautomator2/ext/htmlreport/assets = uiautomator2/ext/htmlreport/assets/*

 # support: pip3 install uiautomator2[image]
[extras]
image =
    scikit-image
    imutils
    findit
    imageio>=2.8.0,<3.0
    imageio-ffmpeg>=0.4.2,<1.0
    websocket_client>=0.57.0,<1.0

[entry_points]
# https://docs.openstack.org/pbr/3.1.1/#entry-points
console_scripts = 
   uiautomator2 = uiautomator2.__main__:main
